# backend/routes/file.go
@@ -8,13 +8,13 @@ import (
 )
 
 // @Summary Upload File
-// @Router /api/v1/files/upload [post]
+// @Router /files/upload [post]
 func uploadFile(c *gin.Context) {
 	service.UploadFiles(c)
 }
 
 // @Summary Get File
-// @Router /api/v1/files/{id} [get]
+// @Router /files/{id} [get]
 func getFile(c *gin.Context) {
 
 	id := c.Param("id")
@@ -33,7 +33,7 @@ func getFile(c *gin.Context) {
 }
 
 // @Summary Get File Text
-// @Router /api/v1/files/ocr/{id} [get]
+// @Router /files/ocr/{id} [get]
 func getFileText(c *gin.Context) {
 	fileId := c.Param("id")
 	text, err := service.GenerateOCRText(fileId)
@@ -52,7 +52,7 @@ func getFileText(c *gin.Context) {
 }
 
 // @Summary Get File AI Analysis
-// @Router /api/v1/files/ai/{id} [get]
+// @Router /files/ai/{id} [get]
 func getFileAnalysis(c *gin.Context) {
 	fileId := c.Param("id")
 	jsonText, err := service.AnalyzeMedicalReport(fileId)
@@ -72,7 +72,7 @@ func getFileAnalysis(c *gin.Context) {
 }
 
 // @Summary Delete File
-// @Router /api/v1/files/{id} [delete]
+// @Router /files/{id} [delete]
 func deleteFile(c *gin.Context) {
 	service.DeleteFile(c)
 }
